<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCardActivity"
    tools:showIn="@layout/activity_new_card">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_word"
                android:inputType="text"
                android:padding="@dimen/small_padding"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/edit_billing_cycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:digits="0123456789"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_billingCycle"
                android:inputType="number"
                android:padding="@dimen/small_padding"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/edit_card"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel"
                app:layout_constraintTop_toBottomOf="@+id/edit_billing_cycle"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>